# autoops-env

./: Dockerfile  README.md  baseline.py  client.py  models.py  openenv.yaml  pyproject.toml
autoops_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
graders/: grader.py
server/: Dockerfile  app.py  environment.py
tasks/: __init__.py  easy.py  hard.py  medium.py
